--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.4",
+    "react-color": "^2.17.0",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
     "react-scripts": "2.1.8",
