--- a/package.json
+++ b/package.json
@@ -1,34 +1,40 @@
 {
-  "name": "paint-canvas-react",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.4",
-    "react-color": "^2.17.0",
-    "react-dom": "^16.8.4",
-    "react-redux": "^6.0.1",
-    "react-scripts": "2.1.8",
-    "redux-saga": "^1.0.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
-  "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "redux-devtools-extension": "^2.13.8"
-  }
+	"name": "paint-canvas-react",
+	"version": "0.1.0",
+	"private": true,
+	"engines": {
+		"node": ">=10.13.0"
+	},
+	"dependencies": {
+		"babel-polyfill": "^6.26.0",
+		"prop-types": "^15.7.2",
+		"react": "^16.8.4",
+		"react-color": "^2.17.0",
+		"react-dom": "^16.8.4",
+		"react-redux": "^6.0.1",
+		"react-scripts": "2.1.8",
+		"redux-saga": "^1.0.2",
+		"serve": "^10.1.2"
+	},
+	"scripts": {
+		"dev": "react-scripts start",
+		"start": "serve -s build",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"heroku-postbuild": "npm run build"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": [
+		">0.2%",
+		"not dead",
+		"not ie <= 11",
+		"not op_mini all"
+	],
+	"devDependencies": {
+		"@babel/core": "^7.3.4",
+		"redux-devtools-extension": "^2.13.8"
+	}
 }
