--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"react-dom": "^16.8.4",
 		"react-redux": "^6.0.1",
 		"react-scripts": "2.1.8",
+		"redux": "^4.0.4",
 		"serve": "^10.1.2"
 	},
 	"scripts": {
